help.txt
execve-demo.c: In function ‘main’:
execve-demo.c:32:13: error: expected ‘;’ before ‘}’ token
     return 0
             ^
             ;
 }
 ~            
